壮举: 重构顶栏

--- a/layout/includes/header/nav.pug
+++ b/layout/includes/header/nav.pug
@@ -1,54 +1,55 @@
 - const { darkmode } = theme
 nav#nav
-  span#blog_name
-    if theme.nav.enable
-      .back-home-button(tabindex='-1')
-        i.anzhiyufont.anzhiyu-icon-grip-vertical
-        .back-menu-list-groups
-          each group in theme.nav.menu
-            .back-menu-list-group
-              .back-menu-list-title= group.title
-              .back-menu-list
-                each item in group.item
-                  a.back-menu-item(href=item.link, title=item.name, target='_blank')
-                    img.back-menu-item-icon(src=item.icon alt=item.name)
-                    span.back-menu-item-text= item.name
-    a#site-name(href=url_for('/'))
-      .title #[=config.title]
-      i.anzhiyufont.anzhiyu-icon-house-chimney
+  #nav-group
+    span#blog_name
+      if theme.nav.enable
+        .back-home-button(tabindex='-1')
+          i.anzhiyufont.anzhiyu-icon-grip-vertical
+          .back-menu-list-groups
+            each group in theme.nav.menu
+              .back-menu-list-group
+                .back-menu-list-title= group.title
+                .back-menu-list
+                  each item in group.item
+                    a.back-menu-item(href=item.link, title=item.name, target='_blank')
+                      img.back-menu-item-icon(src=item.icon alt=item.name)
+                      span.back-menu-item-text= item.name
+      a#site-name(href=url_for('/'))
+        .title #[=config.title]
+        i.anzhiyufont.anzhiyu-icon-house-chimney
 
-  div.mask-name-container
-    center(id="name-container")
-      a(id="page-name" href="javascript:anzhiyu.scrollToDest(0, 500)") PAGE_NAME
-    
-  #menus
-    !=partial('includes/header/menu_item', {}, {cache: true})
-  #nav-right
-    if theme.nav.travelling
-      .nav-button.only-home#travellings_button(style='display: flex')
-        a.site-page(onclick='anzhiyu.totraveling()', title='随机前往一个开往项目网站', href='javascript:void(0);', rel='external nofollow', data-pjax-state='external')
-          i.anzhiyufont.anzhiyu-icon-train
-    .nav-button#randomPost_button
-      a.site-page(onclick='toRandomPost()', title='随机前往一个文章', href='javascript:void(0);')
-        i.anzhiyufont.anzhiyu-icon-dice
-    if (theme.algolia_search.enable || theme.local_search.enable)
-      div.nav-button#search-button
-        a.site-page.social-icon.search(href='javascript:void(0);', title='搜索🔍')
-          i.anzhiyufont.anzhiyu-icon-magnifying-glass
-          span=' '+_p('search.title')
-    
-    if darkmode.enable && darkmode.button
-      div.nav-button#darkmode_navswitch
-        a.darkmode_switchbutton(type="button" href='javascript:void(0);' title=_p('rightside.night_mode_title') onclick="rm.switchDarkMode()")
-          i.anzhiyufont.anzhiyu-icon-circle-half-stroke(style="font-size: 1.3rem")
+    div.mask-name-container
+      #name-container
+        a(id="page-name" href="javascript:anzhiyu.scrollToDest(0, 500)") PAGE_NAME
+      
+    #menus
+      !=partial('includes/header/menu_item', {}, {cache: true})
+    #nav-right
+      if theme.nav.travelling
+        .nav-button.only-home#travellings_button(style='display: flex')
+          a.site-page(onclick='anzhiyu.totraveling()', title='随机前往一个开往项目网站', href='javascript:void(0);', rel='external nofollow', data-pjax-state='external')
+            i.anzhiyufont.anzhiyu-icon-train
+      .nav-button#randomPost_button
+        a.site-page(onclick='toRandomPost()', title='随机前往一个文章', href='javascript:void(0);')
+          i.anzhiyufont.anzhiyu-icon-dice
+      if (theme.algolia_search.enable || theme.local_search.enable)
+        div.nav-button#search-button
+          a.site-page.social-icon.search(href='javascript:void(0);', title='搜索🔍')
+            i.anzhiyufont.anzhiyu-icon-magnifying-glass
+            span=' '+_p('search.title')
+      
+      if darkmode.enable && darkmode.button
+        div.nav-button#darkmode_navswitch
+          a.darkmode_switchbutton(type="button" href='javascript:void(0);' title=_p('rightside.night_mode_title') onclick="rm.switchDarkMode()")
+            i.anzhiyufont.anzhiyu-icon-circle-half-stroke(style="font-size: 1.3rem")
 
-    div.nav-button#nav-totop
-      a.totopbtn(href='javascript:void(0);')
-        i.anzhiyufont.anzhiyu-icon-arrow-up
-        span#percent(onclick="anzhiyu.scrollToDest(0,500)") 0
-    
-    #toggle-menu
-      a.site-page(href='javascript:void(0);')
-        i.anzhiyufont.anzhiyu-icon-bars
+      div.nav-button#nav-totop
+        a.totopbtn(href='javascript:void(0);')
+          i.anzhiyufont.anzhiyu-icon-arrow-up
+          span#percent(onclick="anzhiyu.scrollToDest(0,500)") 0
+      
+      #toggle-menu
+        a.site-page(href='javascript:void(0);')
+          i.anzhiyufont.anzhiyu-icon-bars
 
 
