--- a/source/css/_layout/nav.styl
+++ b/source/css/_layout/nav.styl
@@ -23,6 +23,13 @@
 #sidebar .menus_item ul
   padding-left: 0
 
+#nav-group
+  max-width: 1400px;
+  width: 100%;
+  display: flex;
+  position: relative;
+  padding: 0 1.5rem;
+  align-items: center;
 @media screen and (max-width: 768px)
   #page-header #nav
     padding: 20px
