--- a/layout/includes/head.pug
+++ b/layout/includes/head.pug
@@ -33,7 +33,8 @@ meta(name="apple-touch-fullscreen", content="yes")
 meta(name="apple-mobile-web-app-title", content=pageTitle)
 meta(name="application-name", content=pageTitle)
 meta(name="apple-mobile-web-app-capable", content="yes")
-meta(name="apple-mobile-web-app-status-bar-style", content="default")
+meta(name="apple-mobile-web-app-status-bar-style", content=themeColor)
+
 
 //- Open_Graph
 include ./head/Open_Graph.pug
