- 漏洞   【nav】修复 nav 过窄导致的遮挡的问题   【窄屏文章】修复文章列表时间宽度不够的问题 - 优化   【友链】优化 友链样式，支持 recommend 字段   【暗色模式】暗色模式优化 - 样式   【Banner】优化 bilibili Banner   【状态栏】nav 状态栏颜色触发改为 56

--- a/source/css/_global/index.styl
+++ b/source/css/_global/index.styl
@@ -77,7 +77,7 @@
   --anzhiyu-main-none: #b8b8b800 !important;
 
 [data-theme="light"]
-  --anzhiyu-meta-theme-post-color: #f7f9fe;
+  --anzhiyu-meta-theme-post-color: #fff;
   --anzhiyu-meta-theme-color: #f7f9fe;
   --anzhiyu-theme-op-deep: #4259efdd;
   --global-bg: #f7f9fe;
