切换深色模式方法优化

--- a/layout/includes/shortcutKey.pug
+++ b/layout/includes/shortcutKey.pug
@@ -59,7 +59,7 @@ script.
             pjax.loadUrl("/");
             break;
           case 68:
-            rm.switchDarkMode();
+            anzhiyu.switchDarkMode();
             break;
           case 70:
             pjax.loadUrl("/fcircle/");
