--- a/source/css/_global/index.styl
+++ b/source/css/_global/index.styl
@@ -189,8 +189,12 @@ input::placeholder
 #web_bg
   position: fixed
   z-index: -999
-  width: 100%
-  height: 100%
+  width: 200%;
+  height: 200%;
+  top: -50%;
+  left: -50%;
+  transform: rotate(-1deg);
+  -webkit-overflow-scrolling: touch;
 
 h1,
 h2,
