【文章主色调】修复关闭 post_meta.post.rotate后 移动端文章依旧存在蓝色阴影问题

--- a/source/css/_global/index.styl
+++ b/source/css/_global/index.styl
@@ -186,6 +186,7 @@ body
 
 input::placeholder
   color: var(--font-color)
+
 #web_bg
   position: fixed
   z-index: -999
@@ -195,6 +196,11 @@ input::placeholder
   left: -50%;
   transform: rotate(-1deg);
   -webkit-overflow-scrolling: touch;
+  background: var(--anzhiyu-background)
+  background-attachment: local
+  background-position: center
+  background-size: cover
+  background-repeat: no-repeat
 
 h1,
 h2,
