--- a/source/css/_layout/head.styl
+++ b/source/css/_layout/head.styl
@@ -673,8 +673,9 @@
   .layout > div:first-child:not(.recent-posts)
     z-index: 10;
     margin-top: -30px;
-  #page-header.post-bg #nav
-    background: linear-gradient(to top, var(--anzhiyu-main-none) 0%, var(--anzhiyu-bar-background) 100%);
+  if hexo-config('post_meta.post.rotate')
+    #page-header.post-bg #nav
+      background: linear-gradient(to top, var(--anzhiyu-main-none) 0%, var(--anzhiyu-bar-background) 100%);
   .post-bg:has(.bldbanner) #post-info:after,
   .post-bg:has(.bili-banner) #post-info:after,
   .post-bg:has(.blqbanner) #post-info:after
