【heard返回顶部】返回顶部在标题较短时的hover异常

--- a/source/css/_layout/nav.styl
+++ b/source/css/_layout/nav.styl
@@ -159,6 +159,7 @@ ul.menus_item_child
   box-shadow none
   font-weight bold
   border-radius 100px
+  min-width 100px
 
 #name-container
   align-items center
