【总览】文章总览移动端表现异常   【滚动函数】优化滚动函数，提高性能   【main 函数】大量 main 函数优化 【侧边栏】全新的移动端侧边栏

--- a/source/css/_layout/head.styl
+++ b/source/css/_layout/head.styl
@@ -474,6 +474,9 @@
         align-items: center;
         justify-content: center;
 
+        i
+          font-size: 1.35rem;
+
     .menus_items
       display: none
 
