--- a/source/css/_layout/nav.styl
+++ b/source/css/_layout/nav.styl
@@ -19,10 +19,10 @@
   background: var(--anzhiyu-card-bg)
   font-size: 14px
 
-#sidebar #sidebar-menus .menus_items a.site-page,
 #sidebar .menus_item ul
-  padding-left: 0
-
+  padding-left: 0px
+#sidebar #sidebar-menus .menus_items a.site-page
+  padding-left: .3rem
 #nav-group
   max-width: 1400px;
   width: 100%;
