--- a/source/css/_page/common.styl
+++ b/source/css/_page/common.styl
@@ -1,3 +1,18 @@
+#web_container
+  background: var(--global-bg);
+  transition: all 0.3s ease-out;
+  position: relative;
+  z-index: 2;
+  max-height: 100vh;
+  // overflow-y: overlay;
+  -webkit-overflow-scrolling: touch;
+#web_box
+  transition: all 0.3s ease-out;
+  position: relative;
+  z-index: 2;
+  max-height: 100vh;
+  -webkit-overflow-scrolling: touch;
+
 #body-wrap
   display: flex
   flex-direction: column
