移动端tags页面表现

--- a/source/css/_page/common.styl
+++ b/source/css/_page/common.styl
@@ -20,9 +20,13 @@
   +maxWidth768()
     .layout
       padding: 0;
-    #category,#tag
+    #category,
+    #tag
       padding: 40px 15px 20px;
       background: var(--anzhiyu-background)
+    +maxWidth768()
+      #tag
+        background: transparent;
     #archive
       background: var(--anzhiyu-background)
   
