修复拖拽问题

--- a/source/css/_page/common.styl
+++ b/source/css/_page/common.styl
@@ -4,11 +4,10 @@
   position: relative;
   z-index: 2;
   max-height: 100vh;
-  // overflow-y: overlay;
   -webkit-overflow-scrolling: touch;
 #web_box
   transition: all 0.3s ease-out;
-  position: relative;
+  position: fixed;
   z-index: 2;
   max-height: 100vh;
   -webkit-overflow-scrolling: touch;
