--- a/source/css/_layout/head.styl
+++ b/source/css/_layout/head.styl
@@ -219,7 +219,7 @@
       #toggle-menu
         color: var(--font-color)
         text-shadow: none
-        transition: background .35s ease-in-out,color .2s ease-in-out;
+        transition: background .3s ease-in-out,color 0s ease-in-out;
 
   &.nav-fixed
     #name-container
