--- a/source/css/_layout/head.styl
+++ b/source/css/_layout/head.styl
@@ -215,7 +215,6 @@
       top: 0
       
       a,
-      #site-name,
       #toggle-menu
         color: var(--font-color)
         text-shadow: none
@@ -398,9 +397,9 @@
       color: var(--white)
 
   #site-name
-    // text-shadow: 2px 2px 4px rgba($dark-black, .15)
     font-weight: bold
     cursor: pointer
+    transition: .3s !important
 
   .menus_items
     display: inline
