--- a/source/css/_page/flink.styl
+++ b/source/css/_page/flink.styl
@@ -67,6 +67,14 @@ body[data-type="link"]
     &.cf-friends-lost-contact
       .flink-list-item
         height 60px
+        &:hover
+          .cf-friends-link img
+            width: 0;
+            height: 0;
+            opacity: 0;
+            margin: 0.5rem;
+            min-width: 0px;
+            min-height: 0px;
         .cf-friends-link img
           width: 30px;
           height: 30px;
