--- a/source/css/_layout/head.styl
+++ b/source/css/_layout/head.styl
@@ -169,7 +169,7 @@
   #post-info
     position: absolute
     top: 0
-    padding: 0 12%
+    padding: 0 calc((100% - 1352px)/ 2)
     width: 100%
     height 100%
     display: flex
