暗色模式优化

--- a/source/css/_layout/head.styl
+++ b/source/css/_layout/head.styl
@@ -607,7 +607,7 @@
 [data-theme="dark"] .parallax > use:nth-child(4)
   animation-delay: -5s
   animation-duration: 20s
-  fill: #18171d
+  fill: rgb(0 0 0 / 39%)
 #post-firstinfo
   text-align: left;
   display: flex;
