--- a/source/css/_layout/head.styl
+++ b/source/css/_layout/head.styl
@@ -178,6 +178,8 @@
     flex-direction: column;
     z-index: 3
     animation: slide-in 0.6s 0.3s backwards;
+    +maxWidth1400()
+      padding: 0 12%
 
     +maxWidth768()
       padding: 11rem 6% 0;
