--- a/source/css/_layout/sidebar.styl
+++ b/source/css/_layout/sidebar.styl
@@ -352,6 +352,7 @@ li.card-archive-list-item {
     transform: translate3d(300px, 0px, 0px) scale3d(0.86, 0.86, 1);
     border-radius: 12px
     transition: 0.3s ease-out;
+    z-index 2
     #menu-mask
       display: block
     #post-top-cover 
