--- a/source/css/_page/common.styl
+++ b/source/css/_page/common.styl
@@ -5,6 +5,8 @@
   z-index: 2;
   max-height: 100vh;
   -webkit-overflow-scrolling: touch;
+[data-theme="dark"] #web_container
+  background none
 #web_box
   transition: all 0.3s ease-out;
   position: relative;
