修复打赏二维码距离过近

--- a/source/css/_custom/console/console.css
+++ b/source/css/_custom/console/console.css
@@ -544,6 +544,7 @@ body:has(#console.show) #nav-music .aplayer .aplayer-lrc .aplayer-lrc-contents {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 0.625rem;
 }
 .console-card-group-reward .reward-all .reward-item img {
   width: 230px;
