修复右键菜单新窗口打开新标签页

--- a/layout/includes/anzhiyu/rightmenu-js.pug
+++ b/layout/includes/anzhiyu/rightmenu-js.pug
@@ -439,7 +439,7 @@ script.
     });
 
     document.getElementById("menu-newwindow").addEventListener("click", function () {
-      window.open(domhref);
+      window.open(domhref, "_blank");
       rm.hideRightMenu();
     });
 
@@ -450,7 +450,7 @@ script.
     });
 
     document.getElementById("menu-newwindowimg").addEventListener("click", function () {
-      window.open(domImgSrc);
+      window.open(domImgSrc, , "_blank");
       rm.hideRightMenu();
     });
 
