修复nav音乐播放完变成暂停文字的问题

--- a/layout/includes/anzhiyu/rightmenu-js.pug
+++ b/layout/includes/anzhiyu/rightmenu-js.pug
@@ -450,7 +450,7 @@ script.
     });
 
     document.getElementById("menu-newwindowimg").addEventListener("click", function () {
-      window.open(domImgSrc, , "_blank");
+      window.open(domImgSrc, "_blank");
       rm.hideRightMenu();
     });
 
