修复右键菜单的显示热评字样异常

--- a/layout/includes/anzhiyu/rightmenu-js.pug
+++ b/layout/includes/anzhiyu/rightmenu-js.pug
@@ -245,7 +245,7 @@ script.
           rm.hideRightMenu();
           // e.preventDefault();
         },
-        false
+        { passive: true }
       );
     }
     if (document.getElementById("rightMenu")) {
@@ -257,7 +257,7 @@ script.
           rm.hideRightMenu();
           // e.preventDefault();
         },
-        false
+        { passive: true }
       );
     }
   }
