--- a/source/css/_custom/anzhiyu/custom.css
+++ b/source/css/_custom/anzhiyu/custom.css
@@ -142,10 +142,7 @@ div#category {
   padding: 0 0.2em;
   text-decoration: none;
 }
-#article-container
-  a:not([data-fancybox="gallery"]):not(.headerlink):not(.cf-friends-link):not(.btn-anzhiyu):not(
-    .no-text-decoration
-  ):hover {
+#article-container a:not([data-fancybox="gallery"]):not(.headerlink):not(.cf-friends-link):not(.btn-anzhiyu):hover {
   color: var(--anzhiyu-white);
   background: var(--anzhiyu-main);
   box-shadow: var(--anzhiyu-shadow-lightblack);
