--- a/source/css/_layout/post.styl
+++ b/source/css/_layout/post.styl
@@ -75,7 +75,7 @@ blockquote {
     display: block
     margin: 0 auto 20px
     max-width: 100%
-    transition: filter 375ms ease-in .2s
+    transition: .3s
     border-radius: 8px
 
   p
